[project]
name = "detect-pi-share"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "certifi==2024.12.14",
    "datasets==4.0.0",
    "dill==0.3.8",
    "distro==1.9.0",
    "filelock==3.18.0",
    "fsspec==2024.5.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.34.2",
    "idna==3.6",
    "jiter==0.10.0",
    "joblib==1.5.1",
    "multiprocess==0.70.16",
    "numpy==1.26.4",
    "ollama==0.6.0",
    "openai==1.86.0",
    "packaging==24.0",
    "pandas==2.0.1",
    "pyarrow==21.0.0",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "requests==2.32.4",
    "scikit-learn==1.7.0",
    "scipy==1.15.3",
    "six==1.17.0",
    "sniffio==1.3.1",
    "threadpoolctl==3.6.0",
    "tqdm==4.67.1",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "urllib3==2.2.1",
    "xxhash==3.5.0",
]
